--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@angular/material/theming";
+@include mat-core();
 
+/* ======== Angular material custom themes ======== */
+$my-custom-primary: mat-palette($mat-light-green);
+$my-custom-accent: mat-palette($mat-pink, 100, 500, A100);
+
+$my-custom-theme: mat-dark-theme($my-custom-primary, $my-custom-accent);
+
+@include angular-material-theme($my-custom-theme);
 body {
   margin: 0;
 }
